# e-commerce-system

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
Admin/: Admin.cpp  Admin.h  Complaint.cpp  Complaint.h
Customer/: Cart.cpp  Cart.h  CartItem.h  Customer.cpp  Customer.h  CustomerStorage.cpp  CustomerStorage.h
Data/: complaints.txt  customers.txt  orders.txt  products.txt
Order/: OrderStorage.cpp  OrderStorage.h
Product/: DigitalProduct.cpp  DigitalProduct.h  Product.cpp  Product.h  ProductStorage.cpp  ProductStorage.h  ShippableProduct.cpp  ShippableProduct.h  product.h  shippableproduct.cpp  shippableproduct.h
Shipping/: ShippingService.cpp  ShippingService.h
include/: Admin.h  Cart.h  Product.h  User.h  Utils.h
iv/: InputValidator.cpp  InputValidator.h
src/: main.cpp
tests/: TC001_add_to_cart.md  TC002_checkout_insufficient_funds.md
